--- a/i3/config
+++ b/i3/config
@@ -32,10 +32,17 @@ floating_modifier $mod
 # Set caps to extra escape
 exec_always setxkbmap -option caps:escape
 
-bindsym $mod+shift+x exec i3lock --color 00001a
+
+# Screen lock
+bindsym $mod+shift+x exec lock
 
 # hide split borders
 hide_edge_borders both
+
+# Volume control
+bindsym $mod+p exec --no-startup-id pactl set-sink-volume 1 +5%
+bindsym $mod+n exec --no-startup-id pactl set-sink-volume 1 -5%
+bindsym $mod+m exec --no-startup-id pactl set-sink-mute 1 toggle
 
 # Home settings for monitors
 exec_always xrandr --output HDMI-1 --off
@@ -80,6 +87,7 @@ bindsym $mod+v split v
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
 
+
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
@@ -101,9 +109,9 @@ bindsym $mod+a focus parent
 exec_always --no-startup-id xset r rate 250 35
 
 # Workspaces
-set $workspace1 "1. Emacs"
-set $workspace2 "2. Firefox"
-set $workspace10 "10. Spotify"
+set $workspace1 "1. "
+set $workspace2 "2. "
+set $workspace10 "10. "
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -128,6 +136,14 @@ bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace $workspace10
+
+# Auto start
+assign[class="Emacs"] $workspace1
+assign[class="Firefox"] $workspace2
+assign[class="Spotify"] $workspace10
+
+exec --no-startup-id emacs
+exec --no-startup-id firefox
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -187,4 +203,16 @@ bar {
 		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
 		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
 	}
+}
+
+set $sysmenu "system:  [r]eload  [l]ogout  [p]oweroff  re[b]oot"
+bindsym $mod+Delete      mode $sysmenu
+
+mode $sysmenu {
+    bindsym r         restart
+    bindsym l         exit
+    bindsym p         exec shutdown -P now
+    bindsym b         exec shutdown -r now
+    bindsym Return    mode "default"
+    bindsym Escape    mode "default"
 }
