--- a/i3/config
+++ b/i3/config
@@ -1,6 +1,8 @@
+# Modifier key
 set $mod Mod4
 
-font pango: System San Francisco Display 10
+# System Font
+font pango: System San Francisco Display 9
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
