--- a/i3/config
+++ b/i3/config
@@ -75,7 +75,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # key delay
-exec_always --no-startup-id xset r rate 250 35
+exec_always --no-startup-id xset r rate 200 40
 
 # Workspaces
 set $workspace1 "1. "
@@ -113,10 +113,16 @@ exec --no-startup-id spotify
 for_window [class="Firefox"] move to workspace $workspace2
 for_window [class="Spotify"] move to workspace $workspace10
 
+# Open applications in floating mode
+for_window [class="spacecraze"] floating enable
+for_window [class="Lxappearance"] floating enable
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
+
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
+
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
@@ -129,8 +135,8 @@ mode "resize" {
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
         bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym j resize shrink height 10 px or 10 ppt
+        bindsym k resize grow height 10 px or 10 ppt
         bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
