--- a/i3/config
+++ b/i3/config
@@ -108,9 +108,8 @@ bindsym $mod+Shift+0 move container to workspace $workspace10
 
 # Auto start
 exec --no-startup-id emacs
-exec --no-startup-id firefox
+exec --no-startup-id i3-msg 'workspace $workspace2; exec firefox; workspace $workspace1'
 exec --no-startup-id spotify
-for_window [class="Firefox"] move to workspace $workspace2
 for_window [class="Spotify"] move to workspace $workspace10
 
 # Open applications in floating mode
