--- a/i3/config
+++ b/i3/config
@@ -110,6 +110,7 @@ for_window [class="Spotify"] move to workspace $workspace10
 # Open applications in floating mode
 for_window [class="spacecraze"] floating enable
 for_window [class="Lxappearance"] floating enable
+for_window [class="Testgtk"] floating enable
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
